string parsed to catalogate variable type

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,9 +1,10 @@
 NAME		=	test
 
 SRC			=	main.cpp\
-				ScalarConvverter.cpp
+				convert.cpp\
+				ScalarConverter.cpp
 
-HDS			=	ScalarConvverter.hpp
+HDS			=	ScalarConverter.hpp
 
 OBJ			=	$(SRC:.cpp=.o)
 
